--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/react": "^17.0.0",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^1.1.3",
     "typescript": "^4.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   }
 }
