--- a/package.json
+++ b/package.json
@@ -19,23 +19,22 @@
   },
   "author": "Graham Kaemmer",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.25.2",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "@types/react": "^18.3.3",
-    "babel-loader": "^9.1.3",
-    "html-webpack-plugin": "^5.6.0",
-    "styled-components": "^6.1.12",
-    "typescript": "^5.5.4",
-    "webpack": "^5.93.0",
+    "@babel/preset-react": "^7.26.3",
+    "@types/react": "^18.3.16",
+    "babel-loader": "^9.2.1",
+    "html-webpack-plugin": "^5.6.3",
+    "styled-components": "^6.1.13",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.2.0"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18",
-    "react-dom": "^16.8 || ^17 || ^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
